👷 Fix pytest coverage command

--- a/tox.ini
+++ b/tox.ini
@@ -22,8 +22,8 @@ commands =
     black smartmeter
     flake8 smartmeter --ignore=E501
     pylint smartmeter
-    mypy smartmeter
+    mypy smartmeter --ignore-missing-imports
     coverage erase
-    coverage run --include=smartmeter/* -m pytest -ra
+    coverage run -m pytest test.py -ra
     coverage report -m
     coverage xml
