--- a/.pypirc
+++ b/.pypirc
@@ -1,11 +1,11 @@
 [distutils]
 index-servers =
    pypi
-   pypitest
+   testpypi
 
 [pypi]
 username: Platysma
 
-[pypitest]
+[testpypi]
 repository: https://test.pypi.org/legacy/
 username: Platysma
