--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,70 @@
+[tool.poetry]
+name = "Vienna Smart Meter"
+version = "0.1.0"
+description = "Python library to access the Wiener Netze Smart Meter private API."
+authors = ["Platysma <platysma.dev@gmail.com>"]
+license = "MIT"
+readme = "README.md"
+homepage = "https://github.com/platysma/vienna-smartmeter"
+repository = "https://github.com/platysma/vienna-smartmeter"
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9"
+]
+
+[tool.poetry.urls]
+Changelog = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/releases"
+
+[tool.poetry.dependencies]
+python = "^3.6.1"
+requests = "^2.24.0"
+lxml = "^4.6.3"
+
+[tool.poetry.dev-dependencies]
+pytest = "^6.2.4"
+coverage = {extras = ["toml"], version = "^5.4"}
+safety = "^1.10.3"
+mypy = "^0.910"
+typeguard = "^2.12.1"
+xdoctest = {extras = ["colors"], version = "^0.15.5"}
+pre-commit = "^2.13.0"
+flake8 = "^3.9.2"
+black = "^20.8b1"
+flake8-bandit = "^2.1.2"
+flake8-bugbear = "^21.4.3"
+flake8-docstrings = "^1.6.0"
+flake8-rst-docstrings = "^0.2.3"
+pep8-naming = "^0.12.0"
+darglint = "^1.8.0"
+reorder-python-imports = "^2.6.0"
+pre-commit-hooks = "^4.0.1"
+Pygments = "^2.9.0"
+lxml-stubs = "^0.2.0"
+
+[tool.poetry.scripts]
+smartmeter = "smartmeter.__main__:main"
+
+[tool.coverage.paths]
+source = ["smartmeter", "*/site-packages"]
+
+[tool.coverage.run]
+branch = true
+source = ["smartmeter"]
+
+[tool.coverage.report]
+show_missing = true
+fail_under = 100
+
+[tool.mypy]
+strict = true
+pretty = true
+show_column_numbers = true
+show_error_codes = true
+show_error_context = true
+
 [build-system]
-requires = ["flit_core >=2,<4"]
-build-backend = "flit_core.buildapi"
-
-[tool.flit.metadata]
-author = "Platysma"
-classifiers = ["License :: OSI Approved :: MIT License"]
-description-file = "README.md"
-requires-python=">=3.5"
-home-page = "https://github.com/Platysma/vienna-smartmeter"
-module = "smartmeter"
-dist-name = "vienna-smartmeter"
-requires = [
-    "requests >=2.24.0,<3.0.0",
-    "lxml >=4.6.3,<5.0.0"
-]
-
-[tool.flit.metadata.requires-extra]
-test = [
-    "pytest ==5.4.3",
-    "pytest-cov ==2.10.0",
-    "pytest-asyncio >=0.14.0,<0.15.0",
-    "mypy ==0.812",
-    "flake8 >=3.8.3,<4.0.0",
-    "black ==20.8b1",
-    "lxml-stubs"
-]
-
-[tool.flit.sdist]
-include = ["README.md"]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
