--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ async_timeout = { version = "^3.0.1", optional = true }
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
+pytest-asyncio = "^0.15.1"
 coverage = {extras = ["toml"], version = "^5.4"}
 safety = "^1.10.3"
 mypy = "^0.910"
