--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -12,6 +12,25 @@ jobs:
         uses: actions/checkout@v2.3.4
         with:
           fetch-depth: 2
+          
+      - name: Set up Python
+        uses: actions/setup-python@v2.2.2
+        with:
+          python-version: "3.9"
+
+      - name: Upgrade pip
+        run: |
+          pip install --constraint=.github/workflows/constraints.txt pip
+          pip --version
+
+      - name: Install Poetry
+        run: |
+          pip install --constraint=.github/workflows/constraints.txt poetry
+          poetry --version
+          
+      - name: Build package
+        run: |
+          poetry build --ansi
 
       - name: Publish package on PyPI
         uses: pypa/gh-action-pypi-publish@v1.4.2
