--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,5 @@
 [tool.poetry]
 name = "vienna-smartmeter"
-packages = [
-    { include = "smartmeter", from = "src" },
-]
 version = "0.2.0"
 description = "Python library to access the Wiener Netze Smart Meter private API."
 authors = ["Platysma <platysma.dev@gmail.com>"]
@@ -57,7 +54,7 @@ source = ["src", "*/site-packages"]
 
 [tool.coverage.run]
 branch = true
-source = ["smartmeter"]
+source = ["vienna_smartmeter"]
 
 [tool.coverage.report]
 show_missing = true
